introduce fingerprint endpoint
