# openapi_server/models/__init__.py
@@ -3,4 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.fingerprint import Fingerprint
 from openapi_server.models.upload import Upload
