# openapi_server/models/fingerprint.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class Fingerprint(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name=None, fingerprint=None):  # noqa: E501
+        """Fingerprint - a model defined in OpenAPI
+
+        :param name: The name of this Fingerprint.  # noqa: E501
+        :type name: str
+        :param fingerprint: The fingerprint of this Fingerprint.  # noqa: E501
+        :type fingerprint: List[float]
+        """
+        self.openapi_types = {
+            'name': str,
+            'fingerprint': List[float]
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'fingerprint': 'fingerprint'
+        }
+
+        self._name = name
+        self._fingerprint = fingerprint
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Fingerprint':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The fingerprint of this Fingerprint.  # noqa: E501
+        :rtype: Fingerprint
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self):
+        """Gets the name of this Fingerprint.
+
+
+        :return: The name of this Fingerprint.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this Fingerprint.
+
+
+        :param name: The name of this Fingerprint.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def fingerprint(self):
+        """Gets the fingerprint of this Fingerprint.
+
+
+        :return: The fingerprint of this Fingerprint.
+        :rtype: List[float]
+        """
+        return self._fingerprint
+
+    @fingerprint.setter
+    def fingerprint(self, fingerprint):
+        """Sets the fingerprint of this Fingerprint.
+
+
+        :param fingerprint: The fingerprint of this Fingerprint.
+        :type fingerprint: List[float]
+        """
+
+        self._fingerprint = fingerprint
